# load_balancer_reverse_proxy_cpp

./: .gitignore  CMakeLists.txt  architecture.txt  cmake_commands.sh  config.yaml
examples/: backend_server_0.py  backend_server_1.py  backend_server_2.py
include/balancer/: Backend.hpp  LoadBalancer.hpp  RoundRobinBalancer.hpp
include/config/: config.hpp
include/core/: Server.hpp
include/health/: HealthChecker.hpp
include/observability/: Logger.hpp
src/: main.cpp
src/balancer/: RoundRobinBalancer.cpp
src/config/: config.cpp
src/core/: Server.cpp
src/health/: HealthChecker.cpp
src/observability/: Logger.cpp
